# Red5d-docker-autocompose

./: .gitremotes  Dockerfile  autocompose.py  requirements.txt  setup.cfg  setup.py
src/: autocompose.py
