[metadata]
name = docker-autocompose
version = 1.2.0
author = Red5d
license = GPLv2
description = Generate a docker-compose yaml definition from a running container
keywords = docker, yaml, container
url = https://github.com/Red5d/docker-autocompose

[options]
packages = find:
install_requires = pyaml>=21.10.1; docker>=6.0.1
scripts = autocompose.py

[options.entry_points]
console_scripts = autocompose = autocompose:main
