[metadata]
name = docker-autocompose
version = 1.2.1
author = Red5d
license = GPLv2
description = Generate a docker-compose yaml definition from a running container
keywords = docker, yaml, container
url = https://github.com/Red5d/docker-autocompose

[options]
packages = find:
install_requires = pyaml>=23.9.7; docker>=6.1.3
scripts = autocompose.py

[options.entry_points]
console_scripts = autocompose = autocompose:main
